fix header x-point-of-sale-id is not required and add new test case